--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint --ext .js src || true",
     "lint:fix": "eslint --ext .js src --fix src || true",
     "test": "jest --coverage --maxWorkers=4",
-    "build": "babel src --out-dir lib --ignore tests",
+    "build:js": "babel src --out-dir lib --ignore tests",
+    "build:flow": "flow-copy-source -v -i '**/__tests__/*.js' src lib",
+    "build": "npm run clean && npm run build:js && npm run build:flow",
     "prepublish": "npm run build"
   },
   "files": [
@@ -40,8 +42,8 @@
     "babel-plugin-transform-inline-environment-variables": "^0.2.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-replace-object-assign": "^0.2.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
+    "babel-plugin-transform-replace-object-assign": "^0.2.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.18.0",
@@ -55,6 +57,7 @@
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-react": "^7.5.1",
     "flow-bin": "^0.49.1",
+    "flow-copy-source": "^1.2.1",
     "jest": "^22.0.3",
     "jest-cli": "^20.0.0",
     "prop-types": "^15.6.0",
@@ -64,9 +67,6 @@
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/script/setup.js",
-    "roots": [
-      "<rootDir>/src"
-    ],
     "roots": [
       "<rootDir>/src"
     ],
