--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zegami-enzyme-matchers",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Zegami Testing Matchers for Enzyme",
   "main": "lib/index.js",
   "homepage": "https://github.com/zegami/zegami-enzyme-matchers#readme",
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js src || true",
     "lint:fix": "eslint --ext .js src --fix src || true",
     "test": "jest --coverage --maxWorkers=4",
+    "test:watch": "jest --watchAll --coverage",
     "build:js": "babel src --out-dir lib --ignore tests",
     "build:flow": "flow-copy-source -v -i '**/__tests__/*.js' src lib",
     "build": "npm run clean && npm run build:js && npm run build:flow",
@@ -69,6 +70,18 @@
     "setupTestFrameworkScriptFile": "<rootDir>/script/setup.js",
     "roots": [
       "<rootDir>/src"
+    ],
+    "testPathIgnorePatterns": [
+      "/lib/",
+      "/script/"
+    ],
+    "collectCoverageFrom": [
+      "src/assertions/*.js",
+      "src/types/*.js",
+      "src/utils/*.js",
+      "!<rootDir>/node_modules/",
+      "!<rootDir>/lib/",
+      "!<rootDir>/scripts/"
     ],
     "verbose": false
   }
