--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "zegami-enzyme-matchers",
-  "version": "0.0.26",
+  "version": "0.1.01",
   "description": "Zegami Testing Matchers for Enzyme",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "homepage": "https://github.com/zegami/zegami-enzyme-matchers#readme",
   "author": "Steve Saxton <steves@codeuniquely.co.uk>",
   "license": "MIT",
@@ -17,15 +17,15 @@
     "build": "npm run clean && npm run build:js && npm run build:flow",
     "prepublish": "npm run build"
   },
-  "files": [
-    "lib"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zegami/zegami-enzyme-matchers.git"
   },
   "bugs": {
     "url": "https://https://github.com/zegami/zegami-enzyme-matchers/issues"
+  },
+  "files": {
+    "src"
   },
   "dependencies": {
     "circular-json-es6": "^2.0.1",
