Add post-install to +git

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build:js": "babel src --out-dir lib --ignore tests",
     "build:flow": "flow-copy-source -v -i '**/__tests__/*.js' src lib",
     "build": "npm run clean && npm run build:js && npm run build:flow",
+    "postinstall": "postinstall-build lib",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -25,11 +26,12 @@
     "url": "https://https://github.com/zegami/zegami-enzyme-matchers/issues"
   },
   "files": [
-    "src"
+    "lib"
   ],
   "dependencies": {
     "circular-json-es6": "^2.0.1",
-    "deep-equal-ident": "^1.1.1"
+    "deep-equal-ident": "^1.1.1",
+    "postinstall-build": "^5.0.1"
   },
   "devDependencies": {
     "babel": "^6.23.0",
