--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "zegami-enzyme-matchers",
-  "version": "0.1.01",
+  "version": "0.1.02",
   "description": "Zegami Testing Matchers for Enzyme",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "homepage": "https://github.com/zegami/zegami-enzyme-matchers#readme",
   "author": "Steve Saxton <steves@codeuniquely.co.uk>",
   "license": "MIT",
