--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   ],
   "dependencies": {
     "circular-json-es6": "^2.0.1",
-    "deep-equal-ident": "^1.1.1",
+    "deep-equal-ident": "^1.1.1"
   },
   "devDependencies": {
     "babel": "^6.23.0",
