Use prepare unversion lib folder and upgrade deps
Remove the compiled lib folder from the repo, instead get npm to
build it on install with the prepare script.

Upgrade dependencies to newer versions.

Add jest testURL to avoid localStorage origin issue.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ node_modules/
 *.sublime-*
 .vscode/*
 .idea
+*.sw[nop]
 
 # All types of logging files
 *.log
@@ -21,5 +22,6 @@ jest_*
 
 # anything that can be generated
 coverage
+lib
 .#*
 .~*
