--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zegami-enzyme-matchers",
-  "version": "0.1.04",
+  "version": "0.1.5",
   "description": "Zegami Testing Matchers for Enzyme",
   "main": "lib/index.js",
   "homepage": "https://github.com/zegami/zegami-enzyme-matchers#readme",
@@ -15,7 +15,7 @@
     "build:js": "babel src --out-dir lib --ignore tests",
     "build:flow": "flow-copy-source -v -i '**/__tests__/*.js' src lib",
     "build": "npm run clean && npm run build:js && npm run build:flow",
-    "prepublish": "npm run build"
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -34,36 +34,36 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.1.2",
-    "babel-jest": "^22.0.4",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
+    "babel-jest": "^22.4.4",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-module-resolver": "^3.0.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-inline-environment-variables": "^0.2.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.19",
     "babel-plugin-transform-replace-object-assign": "^0.2.1",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "enzyme": "3.x",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.0",
-    "eslint": "^4.14.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "enzyme-to-json": "^3.3.4",
+    "eslint": "^5.7.0",
     "eslint-config-react": "^1.1.7",
-    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-react": "^7.11.1",
     "flow-bin": "^0.62.0",
-    "flow-copy-source": "^1.2.1",
-    "jest": "^22.0.4",
-    "jest-cli": "^22.0.4",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "flow-copy-source": "^1.3.0",
+    "jest": "^22.4.4",
+    "jest-cli": "^22.4.4",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "rimraf": "^2.6.2"
   },
   "jest": {
@@ -83,6 +83,7 @@
       "!<rootDir>/lib/",
       "!<rootDir>/scripts/"
     ],
+    "testURL": "http://zegami.test",
     "verbose": false
   }
 }
