--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Steve Saxton <steves@codeuniquely.co.uk>",
   "license": "MIT",
   "scripts": {
-    "clean": "rm -rf ./lib",
+    "clean": "rimraf ./lib",
     "lint": "eslint --ext .js src || true",
     "lint:fix": "eslint --ext .js src --fix src || true",
     "test": "jest --coverage --maxWorkers=4",
@@ -63,7 +63,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.3"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/script/setup.js",
